# rust-ooxml-manipulator

./: .gitignore  Cargo.toml  README.md
.local/: Rush of Life.docx
sample_data/: normal.docx  sample_with_custom_xml.docx  sample_with_custom_xml_and_pictures.docx  sample_with_pictures.docx
src/: main.rs
src/utils/: analyze_custom_xml.rs  ensure_ooxml_exist.rs  error.rs  file_watcher.rs  files.rs  input_utils.rs  mod.rs  print_utils.rs  summarize.rs  sync_custom_xml.rs  types.rs  zip_utils.rs
src/utils/analyze_custom_xml/: main.rs
src/utils/file_watcher/: file_watcher.rs  main.rs
src/utils/input_utils/: get_fn_to_call.rs  get_path_from_input.rs  mod.rs
src/utils/summarize/: main.rs
src/utils/sync_custom_xml/: main.rs
src/utils/zip_utils/: main.rs
