[package]
name = "zip-utils"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
colored = "3.0.0"
fancy-regex = "0.16.2"
notify = "6.1"
prompted = "0.2.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
zip = "3.0"
zip-extensions = "0.8.3"

[dev-dependencies]
tempfile = "3.10"

